--- a/index.html
+++ b/index.html
@@ -499,6 +499,12 @@
         </div>
       </section>
 
+      <section class="clause-section">
+        <h2>Kies Clausules</h2>
+        <!-- Hier injecteert script.js automatisch de lijst -->
+        <div id="clausesContainer"></div>
+      </section>
+
       <!-- ─── GOOGLE MAPS & ACTIEKNOP ─────────────────────────── -->
       <div class="form-group-full map-input">
         <label for="locatie">Google Maps-locatie</label>
